--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,9 @@
         <activity android:name=".MovieListByGenreActivity"
             android:label="Movie List">
         </activity>
-
+        <activity android:name=".MovieDetailActivity"
+            android:label="Movie Detail">
+        </activity>
     </application>
 
 </manifest>
